# 2024_SKT_AI_Challenge

./: .gitignore  Dockerfile  README.md  build_and_deploy.sh  deployment.yaml  google_sheet.py  pyproject.toml  send_sms.py  service.yaml  skt_ai_challenge.py
.devcontainer/: devcontainer.json
data/chroma/b71d6025-311a-43f2-84f1-079b2feac78e/: index_metadata.pickle
documents/: 세탁소_크린토피아_FAQ.csv  크린토피아_이천_FAQ.csv
public/: index.html
src/: App.tsx  sms-analytics.tsx
src/components/ui/: card.tsx
tbrand-chatbot/: .env_sample  google_sheet.py  main.py  send_sms.py
